tests/golden/errors/overlapping_overloads.kso
fn main
  print "{same 1}"

fn same x
  x

fn same y
  y
