tests/golden/errors/overlapping_overloads.stderr
error[dispatch]: overlapping overloads of `same` are illegal
  --> overlapping_overloads.kso:7:4
   7 | fn same y
          ^
